# baker

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
input/: 1706.03762.html
output/: 1706.03762_summary.json
src/: main.py  prompts.py
src/analyzers/: html_analyzer.py
src/config/: config_loader.py
src/extractors/: html_extractor.py
src/logging/: logger.py
src/utils/: file_utils.py
